# midas-journal-306

Source/: CMakeLists.txt  itkBoykovAlphaExpansionMRFImageFilter.h  itkBoykovAlphaExpansionMRFImageFilter.txx  itkBoykovGraphCutFilterTest.cxx  itkBoykovGraphTraits.h  itkBoykovImageToGraphFunctor.h  itkBoykovImageToGraphFunctor.txx  itkBoykovMinCutGraphFilter.h  itkBoykovMinCutGraphFilter.txx  itkDefaultGraphTraits.h  itkDefaultImageToGraphFunctor.h  itkDefaultImageToGraphFunctor.txx  itkGraph.h  itkGraph.txx  itkGraphDuplicator.h  itkGraphDuplicator.txx  itkGraphSource.h  itkGraphSource.txx  itkGraphTest.cxx  itkGraphToGraphFilter.txx  itkGraphToImageFilter.h  itkGraphToImageFilter.txx  itkImageGraphTraits.h  itkImageToGraphFilter.h  itkImageToGraphFilter.txx  itkInPlaceGraphFilter.h  itkInPlaceGraphFilter.txx
__MACOSX/Source/: ._CMakeLists.txt  ._itkBoykovAlphaExpansionMRFImageFilter.h  ._itkBoykovAlphaExpansionMRFImageFilter.txx  ._itkBoykovGraphCutFilterTest.cxx  ._itkBoykovGraphTraits.h  ._itkBoykovImageToGraphFunctor.h  ._itkBoykovImageToGraphFunctor.txx  ._itkBoykovMinCutGraphFilter.h  ._itkBoykovMinCutGraphFilter.txx  ._itkDefaultGraphTraits.h  ._itkDefaultImageToGraphFunctor.h  ._itkDefaultImageToGraphFunctor.txx  ._itkGraph.h  ._itkGraph.txx  ._itkGraphDuplicator.h  ._itkGraphDuplicator.txx  ._itkGraphSource.h  ._itkGraphSource.txx  ._itkGraphTest.cxx  ._itkGraphToGraphFilter.h  ._itkGraphToGraphFilter.txx  ._itkGraphToImageFilter.h  ._itkGraphToImageFilter.txx  ._itkImageGraphTraits.h  ._itkImageToGraphFilter.h  ._itkImageToGraphFilter.txx  ._itkInPlaceGraphFilter.h  ._itkInPlaceGraphFilter.txx
